--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,9 @@ complete = ["pytest", "torch", "lightning", "cartopy"]
 
 [project.scripts]
 ipwgml = "ipwgml.cli:ipwgml"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"ipwgml" = ["files/*.json", "files/*.json.gz", "files/*.rc"]
