--- a/models/satrain/geo/training.toml
+++ b/models/satrain/geo/training.toml
@@ -13,18 +13,19 @@ metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
 scheduler = "CosineAnnealingLR"
 scheduler_args = {T_max=20}
 n_data_loader_workers = 4
+persistent_workers = false
 
 [stage_1.training_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
 split = "training"
-retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0, time_steps=[3]}]
+retrieval_input = [{name="geo", normalize="minmax", nan=-2.0, time_steps=[3]}]
 
 [stage_1.validation_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
-split = "training"
-retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0, time_steps=[3]}]
+split = "validation"
+retrieval_input = [{name="geo", normalize="minmax", nan=-2.0, time_steps=[3]}]
 
 [stage_2]
 n_epochs = 40
@@ -41,16 +42,17 @@ metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
 scheduler = "CosineAnnealingLR"
 scheduler_args = {T_max=20}
 n_data_loader_workers = 4
+persistent_workers = false
 
 [stage_2.training_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
 split = "training"
-retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0, time_steps=[3]}]
+retrieval_input = [{name="geo", normalize="minmax", nan=-2.0, time_steps=[3]}]
 
 [stage_2.validation_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
-split = "training"
-retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0, time_steps=[3]}]
+split = "validation"
+retrieval_input = [{name="geo", normalize="minmax", nan=-2.0, time_steps=[3]}]
 
