--- a/models/satrain/geo_ir/training.toml
+++ b/models/satrain/geo_ir/training.toml
@@ -13,6 +13,7 @@ metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
 scheduler = "CosineAnnealingLR"
 scheduler_args = {T_max=20}
 n_data_loader_workers = 4
+persistent_workers = false
 
 [stage_1.training_dataset_args]
 reference_sensor = "gmi"
@@ -23,7 +24,7 @@ retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}
 [stage_1.validation_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
-split = "training"
+split = "validation"
 retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}]
 
 [stage_2]
@@ -41,6 +42,7 @@ metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
 scheduler = "CosineAnnealingLR"
 scheduler_args = {T_max=20}
 n_data_loader_workers = 4
+persistent_workers = false
 
 [stage_2.training_dataset_args]
 reference_sensor = "gmi"
@@ -51,6 +53,6 @@ retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}
 [stage_2.validation_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
-split = "training"
+split = "validation"
 retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}]
 
