--- a/models/satrain/geo_ir/training.toml
+++ b/models/satrain/geo_ir/training.toml
@@ -40,7 +40,7 @@ reference_datasets = ["gpm"]
 batch_size = 16
 metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
 scheduler = "CosineAnnealingLR"
-scheduler_args = {T_max=20}
+scheduler_args = {T_max=40}
 n_data_loader_workers = 4
 persistent_workers = false
 
@@ -51,6 +51,35 @@ split = "training"
 retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}]
 
 [stage_2.validation_dataset_args]
+reference_sensor = "gmi"
+geometry = "gridded"
+split = "validation"
+retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}]
+
+[stage_3]
+n_epochs = 80
+optimizer = "AdamW"
+optimizer_args = {lr = 5e-4}
+#sequence_length = 16
+scene_size = 256
+dataset_module = "ipwgml.pytorch.datasets"
+training_dataset = "SatRainSpatial"
+input_datasets = ["merged_ir"]
+reference_datasets = ["gpm"]
+batch_size = 16
+metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
+scheduler = "CosineAnnealingLR"
+scheduler_args = {T_max=80}
+n_data_loader_workers = 4
+persistent_workers = false
+
+[stage_3.training_dataset_args]
+reference_sensor = "gmi"
+geometry = "gridded"
+split = "training"
+retrieval_input = [{name="geo_ir", normalize="minmax", nan=-2.0, time_steps=[7]}]
+
+[stage_3.validation_dataset_args]
 reference_sensor = "gmi"
 geometry = "gridded"
 split = "validation"
