--- a/models/satrain/gmi/training.toml
+++ b/models/satrain/gmi/training.toml
@@ -56,3 +56,33 @@ geometry = "gridded"
 split = "validation"
 retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0}]
 
+
+[stage_3]
+n_epochs = 80
+optimizer = "AdamW"
+optimizer_args = {lr = 5e-4}
+#sequence_length = 16
+scene_size = 256
+dataset_module = "ipwgml.pytorch.datasets"
+training_dataset = "SatRainSpatial"
+input_datasets = ["merged_ir"]
+reference_datasets = ["gpm"]
+batch_size = 16
+metrics = ["Bias", "MSE", "CorrelationCoef", "PlotSamples"]
+scheduler = "CosineAnnealingLR"
+scheduler_args = {T_max=80}
+n_data_loader_workers = 4
+persistent_workers = false
+
+[stage_3.training_dataset_args]
+reference_sensor = "gmi"
+geometry = "gridded"
+split = "training"
+retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0}]
+
+[stage_3.validation_dataset_args]
+reference_sensor = "gmi"
+geometry = "gridded"
+split = "validation"
+retrieval_input = [{name="gmi", normalize="minmax", nan=-2.0}]
+
