--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior 
 # There are some restrictions on what makes a valid project name
 # specification here:
 # https://packaging.python.org/specifications/core-metadata/#name
-name = "ipwgml"
+name = "satrain"
 version = "0.1"  # REQUIRED, although can be dynamic
 description = "A machine-learning benchmark dataset for satellite-based precipitation retrievals"
 readme = "README.md"
@@ -54,10 +54,10 @@ complete = ["pytest", "torch", "lightning", "cartopy"]
 "Docs" = "https://ipwgml.readthedocs.io"
 
 [project.scripts]
-ipwgml = "ipwgml.cli:ipwgml"
+satrain = "satrain.cli:satrain"
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.package-data]
-"ipwgml" = ["files/*.json", "files/*.json.gz", "files/*.rc"]
+"satrain" = ["files/*.json", "files/*.json.gz", "files/*.rc"]
