--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ version = "0.1"  # REQUIRED, although can be dynamic
 description = "A machine-learning benchmark dataset for satellite-based precipitation retrievals"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {file = "LICENSE.txt"}
+license = "MIT"
 keywords = ["machine-learning", "benchmark", "dataset", "meteorology", "geophyisics"]
 authors = [
   {name = "Simon Pfreundschuh", email = "simon.pfreundschuh@colostate.edu" }
