Make sure stat files are included.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,4 +60,4 @@ satrain = "satrain.cli:satrain"
 include-package-data = true
 
 [tool.setuptools.package-data]
-"satrain" = ["files/*.json", "files/*.json.gz", "files/*.rc"]
+"satrain" = ["files/*.json", "files/*.json.gz", "files/*.rc", "files/stats/*.nc"]
